add private chat and notifications with websocket
